--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,6 @@
 include:
   - ./supabase/docker/docker-compose.yml
 
-volumes:
-  n8n_storage:
-  ollama_storage:
-  qdrant_storage:
-  open-webui:
-  flowise:
-  caddy-data:
-  caddy-config:
-  valkey-data:
-  langfuse_postgres_data:
-  langfuse_clickhouse_data:
-  langfuse_clickhouse_logs:
-  langfuse_minio_data:
-
 x-n8n: &service-n8n
   image: n8nio/n8n:latest
   environment:
@@ -38,13 +24,13 @@ x-ollama: &service-ollama
   environment:
     - OLLAMA_CONTEXT_LENGTH=8192
   volumes:
-    - ollama_storage:/root/.ollama
+    - ./data/ollama_storage:/root/.ollama
 
 x-init-ollama: &init-ollama
   image: ollama/ollama:latest
   container_name: ollama-pull-llama
   volumes:
-    - ollama_storage:/root/.ollama
+    - ./data/ollama_storage:/root/.ollama
   entrypoint: /bin/sh
   command:
     - "-c"
@@ -68,7 +54,7 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"        
     volumes:
-        - ~/.flowise:/root/.flowise
+        - ./data/flowise:/root/.flowise
     entrypoint: /bin/sh -c "sleep 3; flowise start"
 
   open-webui:
@@ -80,7 +66,7 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     volumes:
-      - open-webui:/app/backend/data
+      - ./data/open-webui:/app/backend/data
 
   n8n-import:
     <<: *service-n8n
@@ -99,7 +85,7 @@ services:
     ports:
       - 5678:5678
     volumes:
-      - n8n_storage:/home/node/.n8n
+      - ./data/n8n_storage:/home/node/.n8n
       - ./n8n/backup:/backup
       - ./shared:/data/shared
     depends_on:
@@ -113,7 +99,7 @@ services:
     ports:
       - 6333:6333
     volumes:
-      - qdrant_storage:/qdrant/storage
+      - ./data/qdrant_storage:/qdrant/storage
 
   caddy:
     container_name: caddy
@@ -121,9 +107,9 @@ services:
     network_mode: host
     restart: unless-stopped
     volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile:ro
-      - caddy-data:/data:rw
-      - caddy-config:/config:rw
+      - ./data/Caddyfile:/etc/caddy/Caddyfile:ro
+      - ./data/caddy-data:/data:rw
+      - ./data/caddy-config:/config:rw
     environment:
       - N8N_HOSTNAME=${N8N_HOSTNAME:-":8001"}
       - WEBUI_HOSTNAME=${WEBUI_HOSTNAME:-":8002"}
@@ -230,8 +216,8 @@ services:
       CLICKHOUSE_USER: clickhouse
       CLICKHOUSE_PASSWORD: ${CLICKHOUSE_PASSWORD}
     volumes:
-      - langfuse_clickhouse_data:/var/lib/clickhouse
-      - langfuse_clickhouse_logs:/var/log/clickhouse-server
+      - ./data/langfuse_clickhouse_data:/var/lib/clickhouse
+      - ./data/langfuse_clickhouse_logs:/var/log/clickhouse-server
     ports:
       - 127.0.0.1:8123:8123
       - 127.0.0.1:9000:9000
@@ -255,7 +241,7 @@ services:
       - 9090:9000
       - 127.0.0.1:9091:9001
     volumes:
-      - langfuse_minio_data:/data
+      - ./data/langfuse_minio_data:/data
     healthcheck:
       test: ["CMD", "mc", "ready", "local"]
       interval: 1s
@@ -278,7 +264,7 @@ services:
     ports:
       - 127.0.0.1:5433:5432
     volumes:
-      - langfuse_postgres_data:/var/lib/postgresql/data              
+      - ./data/langfuse_postgres_data:/var/lib/postgresql/data              
 
   redis:
     container_name: redis
@@ -286,7 +272,7 @@ services:
     command: valkey-server --save 30 1 --loglevel warning
     restart: unless-stopped  
     volumes:
-      - valkey-data:/data
+      - ./data/valkey-data:/data
     cap_drop:
       - ALL
     cap_add:
